# SmartMate

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: README-Qt.txt  architecture.md  focus-design.md  functional-test.md  project-overview.md  statistics-design.md  widgets-migration.md  windows-deployment.md
docs/report/: finalreport.typ  midreport.typ  template.typ
docs/report/images/: state-machine.html
scripts/: deploy.ps1
src/app/: AppBootstrapper.cpp  AppBootstrapper.h  AppBootstrapperQml.cpp  ApplicationRuntime.cpp  ApplicationRuntime.h  CMakeLists.txt  main.cpp  main_widgets.cpp
src/common/: CMakeLists.txt
src/common/presentation/: UiNotification.cpp  UiNotification.h
src/model/: CMakeLists.txt
src/model/dependencies/: TaskDependencyGraph.cpp  TaskDependencyGraph.h
src/model/domain/: FocusSession.h  Task.cpp  Task.h  TaskCategory.cpp  TaskCategory.h  TaskConstraints.h  (+9 more)
src/view/: CMakeLists.txt
src/view/qml/: DependencyGraphEdge.qml  DependencyGraphNode.qml  DependencyGraphPage.qml  Main.qml  TaskCard.qml  TaskDependencyDialog.qml  TaskDetailsDialog.qml  TaskEditorDialog.qml  TaskFilterBar.qml  TaskFocusCard.qml  TaskPage.qml
src/view/widgets/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindowDependencies.h
src/view/widgets/binding/: WidgetBinding.h
src/view/widgets/graph/: DependencyGraphPage.cpp  TaskGraphItems.cpp
src/view/widgets/settings/: SettingsPage.cpp  SettingsPage.h
src/view/widgets/statistics/: StatisticsPage.cpp  StatisticsPage.h
src/view/widgets/task/: DeadlinePickerDialog.cpp  DeadlinePickerDialog.h  DurationPickerDialog.cpp  DurationPickerDialog.h  TaskCategoryDialog.cpp  TaskCategoryDialog.h  TaskCreationPredecessorDialog.cpp  TaskCreationPredecessorDialog.h  TaskDependencyDialog.cpp  TaskDependencyDialog.h  TaskDetailsDialog.cpp  TaskDetailsDialog.h  TaskEditorDialog.cpp  TaskEditorDialog.h  TaskItemDelegate.cpp  TaskItemDelegate.h  TaskPage.cpp  TaskPage.h
src/view/widgets/theme/: WidgetTheme.cpp  WidgetTheme.h
src/viewmodel/: AppViewModel.cpp  AppViewModel.h  AppearanceSettingsViewModel.cpp  AppearanceSettingsViewModel.h  CMakeLists.txt  ContractQmlForeignTypes.h  FocusErrorMapper.cpp  FocusErrorMapper.h  FocusProjectionModels.cpp  FocusProjectionModels.h  FocusViewModel.cpp  FocusViewModel.h  TaskCategoryPresentation.cpp  TaskCategoryPresentation.h  TaskCategoryViewModel.cpp  TaskCategoryViewModel.h  TaskDependencyViewModel.cpp  TaskDependencyViewModel.h  TaskDetailsViewModel.cpp  TaskDetailsViewModel.h  TaskEditorDraftState.cpp  TaskEditorSessionCommands.cpp  TaskEditorViewModel.cpp  TaskEditorViewModel.h  TaskErrorMapper.cpp  TaskErrorMapper.h  TaskFocusViewModel.cpp  TaskFocusViewModel.h  TaskGraphLayout.cpp  TaskGraphLayout.h  TaskGraphProjectionModels.cpp  TaskGraphProjectionModels.h  TaskGraphViewModel.cpp  TaskGraphViewModel.h  TaskListBulkCommands.cpp  TaskListCommands.cpp  TaskListProjection.cpp  TaskListViewModel.cpp  TaskListViewModel.h  TaskPlanProjection.cpp  (+3 more)
src/viewmodel/contracts/: AppearanceSettingsContract.h  CMakeLists.txt  FocusContract.h  TaskCategoryContract.h  TaskDependencyContract.h  TaskDetailsContract.h  TaskEditorContract.h  TaskFocusContract.h  TaskGraphContract.h  TaskListContract.h  TaskPresentationTypes.h  ViewModelContracts.cpp
src/viewmodel/qml/: CMakeLists.txt  ViewModelQmlForeignTypes.h
tests/: CMakeLists.txt
tests/architecture/: check_mvvm_boundaries.cmake
tests/fakes/: FakeFocusSessionRepository.h  FakeTaskActivityRepository.h  FakeTaskDeletionRepository.h  FakeTaskDependencyRepository.h  FakeTaskRepository.h
tests/integration/: tst_FocusAppLifecycle.cpp  tst_TaskCreationFlow.cpp  tst_WidgetsAppearanceFlow.cpp  tst_WidgetsCategoryDependencyFlow.cpp  tst_WidgetsStatisticsFlow.cpp  tst_WidgetsTaskFlow.cpp
tests/model/: tst_FocusService.cpp  tst_TaskCategoryService.cpp  tst_TaskDependencyCancellation.cpp  tst_TaskOrderingPolicy.cpp  tst_TaskService.cpp  tst_TaskStateMachine.cpp  tst_TaskStateTransitions.cpp
tests/persistence/: tst_SqliteFocusSessionRepository.cpp  tst_SqliteTaskRepository.cpp
tests/qml/: quicktest_main.cpp  tst_TaskListControls.qml
tests/qml_graph/: quicktest_main.cpp  tst_DependencyGraph.qml
tests/viewmodel/: tst_AppearanceSettings.cpp  tst_FocusViewModel.cpp  tst_TaskDependencyViewModel.inc  tst_TaskEditorViewModel.inc  tst_TaskGraphViewModel.inc  tst_TaskListViewModel.inc  tst_TaskPresentation.cpp  tst_TaskViewModels.cpp  tst_ViewModelContracts.cpp
tests/widgets/: tst_GraphWidgets.cpp  tst_SettingsWidgets.cpp  tst_StatisticsWidgets.cpp  tst_TaskWidgets.cpp
(+43 files in other folders)
